project(QtConfigCalculator)

FIND_PACKAGE(Qt4 REQUIRED)

# current binary dir for the generated headers from the ui and the moc
include_directories(${CMAKE_CURRENT_BINARY_DIR})
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}  ${PROJECT_NAME}_SOURCES)

SET(${PROJECT_NAME}_QOBJECT_HEADERS MotorConfigWidget.h)
#SET(${PROJECT_NAME}_HEADERS ${PROJECT_NAME}_QOBJECT_HEADERS PlotWindow.h)
SET(${PROJECT_NAME}_FORMS MotorConfigWidget.ui)
#SET(${PROJECT_NAME}_RESOURCES ${PROJECT_NAME}.qrc)

QT4_WRAP_CPP(${PROJECT_NAME}_HEADERS_MOC ${${PROJECT_NAME}_QOBJECT_HEADERS})
QT4_WRAP_UI(${PROJECT_NAME}_FORMS_HEADERS ${${PROJECT_NAME}_FORMS})
message("${PROJECT_NAME}_FORMS_HEADERS ${${PROJECT_NAME}_FORMS_HEADERS} ")
#QT4_ADD_RESOURCES(${PROJECT_NAME}_RESOURCES_RCC ${${PROJECT_NAME}_RESOURCES})

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_EXECUTABLE(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES} 
  ${${PROJECT_NAME}_HEADERS_MOC}
  ${${PROJECT_NAME}_FORMS_HEADERS} 
  ${${PROJECT_NAME}_RESOURCES_RCC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} MotorDriverCard ConfigCalculator ${QT_LIBRARIES} )
